---
source: src/lib.rs
expression: "test_parse::<UniqueDeriveInputs>(\"struct Foo;\\nenum Bar {}\\nunion Foo {}\",\n    Behaviour::IncludeSource)"
---
  × duplicate definition of `Foo`
   ╭─[1:1]
 1 │ struct Foo;
   ·        ─┬─
   ·         ╰── initial definition here
 2 │ enum Bar {}
 3 │ union Foo {}
   ·       ─┬─
   ·        ╰── duplicate definition of `Foo`
   ╰────

